# encfs-tpm

./: CMakeLists.txt  LICENSE  README.md
include/: encfs.h  encfs_crypto.h  encfs_fuse.h  encfs_tpm.h
scripts/: run_swtpm.sh
src/: crypto.c  fs.c  main.c  tpm.c
